# cryptoalgo

./: .gitignore  pyproject.toml
algo/binance/: coins.py  compute_betas.py  convert_l2_data.py  features.py  fit.py  ob.py  read_l2_data.py  tests.py  trades.py
algo/blockchain/: algo_requests.py  cache.py  mixedstream.py  process_volumes.py  test_data.py  wallets.py
algo/cpp/: series.h
algo/dataloading/: caching.py
algo/signals/: constants.py  evaluation.py  responses.py
algo/simulation/: reports.py  simulator.py  tests_simulation.py
algo/strategy/: features.py
algo/stream/tests.py/: tests.py
algo/tools/: asset_data_store.py  plot_utils.py
algo/trading/: costs.py  impact.py  portfolio.py  trades.py  tradingengine.py
algo/universe/: universe.py
scripts/: aggTrades.py  download_historical.py  exp.py  reports.py  sim.py
src/algo/: definitions.py
src/algo/binance/: api.py  backtest.py  cached_api.py  coingecko.py  coins.py  compute_betas.py  data_types.py  dataloader.py  evaluation.py  experiment.py  experiment_runner.py  features.py  fit.py  model.py  optimiser.py  pfolio_data.py  s3_download.py  sim_reports.py  tests.py  utils.py
src/algo/blockchain/: base.py  plot_price.py  process_prices.py  process_volumes.py  stream.py  utils.py
src/algo/bybit/: ccxt_test.py  order.py  utils.py  ws.py
src/algo/cpp/: CMakeLists.txt  series.cpp  series.h  series_main.cpp  series_tests.cpp  test.py
src/algo/dataloading/: caching.py
src/algo/engine/: base.py  engine.py
src/algo/optimizer/: base.py  optimizerV1.py  optimizerV2.py
src/algo/signals/: datastore.py  featurizers.py  models.py  responses.py  tests.py  weights.py
src/algo/simulation/: tests_simulator.py
src/algo/sqlite/: base.py
src/algo/strategy/: analysis.py  analytics.py  modelling.py  strategies.py
src/algo/stream/: aggregators.py  marketstream.py  sqlite.py
src/algo/tools/: asset_data_store.py  timestamp.py  wallets.py
src/algo/trading/: signalprovider.py  swapper.py
src/algo/universe/: assets.py  hardcoded.py  pools.py  universe.py
